@@ -1,0 +1,21 @@
+name                = Module-Manifest
+author              = Adam Kennedy <adamk@cpan.org>
+copyright_holder    = Adam Kennedy
+copyright_year      = 2006
+license             = Perl_5
+abstract            = Parse and examine a Perl distribution MANIFEST file
+
+[@Author::ETHER]
+:version = 0.119
+installer = MakeMaker
+Authority.authority = cpan:ADAMK
+-remove = PodWeaver
+Test::Compile.:version = 2.058
+-remove = Test::NoTabs      ; TODO
+-remove = Test::PodSpelling ; TODO
+
+[PodVersion]
+
+[Prereqs]
+File::Spec = 0.80
+Params::Util = 0.10
