@@ -1,4 +1,8 @@
-Revision history for Perl extension Module-Manifest
+Revision history for Module-Manifest
+
+{{$NEXT}}
+        - switch packaging to Dist::Zilla, which makes the distribution
+          installable again on perl 5.27.7  (See RT#123867)
 
 1.08      2010-06-15
 	- Updated to Module::Install::DSL 0.99
